[template] fix alignment of menu items and social media buttons (too many items to fit)

--- a/wp-content/themes/paradise/Paradise/stylesheets/styles.css
+++ b/wp-content/themes/paradise/Paradise/stylesheets/styles.css
@@ -2084,3 +2084,4 @@ body {font-family:Verdana,Geneva,Kalimati,sans-serif; background:url('../images/
 h1, h2, h3, h4, h5, h6, .big_btn, a.big_btn, #f_sidebar h3, .error404, .s3sliderImage .title { font-family: 'MgOpen Modata', 'Source Sans Pro', 'Arial Narrow', Arial, Helvetica, sans-serif;}
 #s:focus {color:#999 !important}
 .post_thumb		{display:block; overflow:hidden;}
+#menu li { margin-right:3px; }
